dizin isimleri güncellendi

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-YazilimGelistiriciKampi/ClassMetotDemo/
-YazilimGelistiriciKampi/GenericsIntro/
-YazilimGelistiriciKampi/Metotlar/
-YazilimGelistiriciKampi/OOP/
-YazilimGelistiriciKampi/OOP3/
+KampOdev5/ClassMetotDemo/
+KampOdev5/GenericsIntro/
+KampOdev5/Metotlar/
+KampOdev5/OOP/
+KampOdev5/OOP3/
 MyFinalProject/
 RobotlarProje2/
 
