KampOdev5 dizini oluşturuldu

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-KampOdev5/ClassMetotDemo/
-KampOdev5/GenericsIntro/
-KampOdev5/Metotlar/
-KampOdev5/OOP/
-KampOdev5/OOP3/
+Kamp/
 MyFinalProject/
 RobotlarProje2/
 
