jwt entegrasyonu getirildi, securedoperation attr başlığı seçilmedi.
Signed-off-by: POYRAZ AKTAS <poyraz.educational@gmail.com>

--- a/CarRentalProject/WepAPI/appsettings.json
+++ b/CarRentalProject/WepAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "poyraz@poyraz.com",
+    "Issuer": "poyraz@poyraz.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
